# Q4-Rescue

./: .gitignore  Medication Adherence Workflow_v_212.md  PROMPT_NEXT_CHAT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260314_0001_initial_schema.py
app/: main.py  settings.py
app/api/: deps.py  security.py
app/domain/: __init__.py  barrier.py  case.py  contact_attempt.py  errors.py  measure.py  measure_case.py  measure_case.py.save  medication.py  medication_pharmacy.py  medication_provider.py  member.py  pharmacy.py  prescriber.py  provider.py  referral.py  task.py  task_contact_attempt.py
app/observability/: __init__.py  context.py  http.py  logging.py  metrics.py  tracing.py
app/persistence/: connection.py  db.py  migrations.py  schema.sql  sql.py
documentation/: 00_master_index.md  project_status_snapshot_2026-03-15.md
documentation/02_Domain/: barrier.md  case.md  contact_attempt.md  measure.md  measure_case.md  medication.md  medication_pharmacy.md  medication_provider.md  member.md  pharmacy.md  provider.md  referral.md  task.md  task_contact_attempt.md
documentation/03_Workflows/: intake_workflow.md  rescue_workflow_overview.md
documentation/04_Rules/: adherence_rules.md  eligibility_rules.md  escalation_rules.md  state_transition_rules.md
documentation/05_Data_Model/: entity_relationships.md
scripts/: generate_status_snapshot_pdf.py
tests/: postgres_support.py  test_case_api.py  test_case_domain.py  test_domain_entities.py  test_migrations.py  test_settings.py
(+15 files in other folders)
